all metadata values tested